--- a/local-weather-website.html
+++ b/local-weather-website.html
@@ -86,7 +86,7 @@ background-color:#ff6d6d;
 }
 </style>
 </head>
-<body>
+ <body onload= "apiCall()">
 
 
 <div style = "margin-right:3rem;">
@@ -95,7 +95,7 @@ background-color:#ff6d6d;
   <span class="checkmark"></span>
 </label>
 <label class="container">C°
-  <input id "c" type="radio" name="unit"  onclick = 'apiCall()' value = "C">
+  <input id = "c" type="radio" name="unit"  onclick = 'apiCall()' value = "C">
   <span class="checkmark"></span>
 </label>
 </div>
@@ -111,7 +111,6 @@ background-color:#ff6d6d;
 </h2>      
 </center>
 
- <body onload= "apiCall()">
   
   <div class= "extra">
    <h4>Current Date and Time: 
@@ -158,7 +157,8 @@ background-color:#ff6d6d;
 
 </body>
 
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
  //Get Coords
 var lat;
 var long;
